--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
-<title>Главная</title>
+<html lang=ru dir="ltr">
 
-<body spellcheck="false">
-  <center><h1>Hello world!</h1></center>
-</body>
+  <head>
+
+    <meta charset="utf-8">
+
+    <title>Главная</title>
+
+  </head>
+
+  <body spellcheck="false">
+
+    <script src="script_example.js">
+      f();
+    </script>
+
+  </body>
+
+</html>
