Feat: document write

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body spellcheck="false">
 
     <script src="script_example.js">
-      f();
+      document.write(f());
     </script>
 
   </body>
