Feat: Write on page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
   <body spellcheck="false">
 
-    <script src="script_example.js">
+    <script src="script_example.js"></script>
+    <script type="text/javascript">
+      console.log(f());
       document.write(f());
     </script>
 
