--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body spellcheck="false">
 
-    <script src="script_example.js"></script>
+    <script src="script.example.js"></script>
     <script type="text/javascript">
       console.log(f());
       document.write(f());
